--- a/src/index.html
+++ b/src/index.html
@@ -4,34 +4,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
   <link rel="stylesheet" href="app.css">
-  <body class="bg-washed-green">
-    <article class="bg-white center mw6 ba b--black-10 mv3">
-      <div class="pv2 ph3">
-        <h3 class="f4 gray">14 / 123</h3>
-         <h1 class="f5 ttu tracked">Pitäisikö Helsinkiin rakentaa uusi Guggenheim -museo? tai paremmin muotoiltu kysymys museon rahoituksesta tai kaavasta, kyllähän tähän mahtuu useampi rivi kysymystä.</h1>
+  <body class="bg-washed-green avenir">
+    <header class="bg-light-green pv1 ph3">
+      <h2 class="f1">Voting view</h2>
+    </header>
+    <section class="mb5">
+      <article class="bg-white center mw6 ba b--black-10 mv3">
+        <div class="pv2 ph3">
+          <h3 class="f5 gray mv2">14 / 123</h3>
+           <h1 class="f4 dark-gray mv2 ttu">Pitäisikö Helsinkiin rakentaa uusi Guggenheim -museo? tai paremmin muotoiltu kysymys museon rahoituksesta tai kaavasta, kyllähän tähän mahtuu useampi rivi kysymystä.</h1>
+        </div>
+        <div class="aspect-ratio aspect-ratio--16x9 mb">
+          <div class="aspect-ratio--object cover" style="background:url(http://designguggenheimhelsinki.org/images/finalists/GH-04380895/GH-04380895_Rendering-A.jpg) center;"></div>
+        </div>
+        <div class="pa3">
+          <small class="gray db pv2">Äänestetty - <time>11.12.2016</time></small>
+        </div>
+      </article>
+      <div class="flex items-center justify-center pa1">
+        <a href="#0" class="f4 no-underline white bg-animate hover-bg-red hover-white inline-flex items-center justify-center pa3 ba br-pill w4 mr4 bg-dark-red">
+          <span class="">EI</span>
+        </a>
+        <a href="#0" class="f4 no-underline white bg-animate hover-bg-green hover-white inline-flex items-center justify-center pa3 ba br-pill w4 mr4 bg-dark-green">
+          <span class="">KYLLÄ</span>
+        </a>
+        <a href="#0" class="f4 no-underline white bg-animate hover-bg-light-blue hover-white inline-flex items-center justify-center pa3 ba br-pill w4 bg-blue">
+          <span class="pr1">TYHJÄ</span>
+        </a>
       </div>
-      <div class="aspect-ratio aspect-ratio--16x9 mb">
-        <div class="aspect-ratio--object cover" style="background:url(http://designguggenheimhelsinki.org/images/finalists/GH-04380895/GH-04380895_Rendering-A.jpg) center;"></div>
-      </div>
-      <div class="pa3">
-        <small class="gray db pv2">Äänestetty - <time>11.12.2016</time></small>
-      </div>
-    </article>
-    <div class="flex items-center justify-center pa1">
-      <a href="#0" class="f4 no-underline white bg-animate hover-bg-red hover-white inline-flex items-center justify-center pa3 ba br-pill w4 mr4 bg-dark-red">
-        <span class="">EI</span>
-      </a>
-      <a href="#0" class="f4 no-underline white bg-animate hover-bg-green hover-white inline-flex items-center justify-center pa3 ba br-pill w4 mr4 bg-dark-green">
-        <span class="">KYLLÄ</span>
-      </a>
-      <a href="#0" class="f4 no-underline white bg-animate hover-bg-light-blue hover-white inline-flex items-center justify-center pa3 ba br-pill w4 bg-blue">
-        <span class="pr1">TYHJÄ</span>
-      </a>
-    </div>
-    
-    <article class="center mw5 mw6-ns hidden ba mv4">
-    <h1 class="f4 bg-near-black white mv0 pv2 ph3">Sinulle sopivimmat puolueet</h1>
-    <div class="pa3 bt bg-white">
+    </section>
+
+
+    <header class="bg-light-green pv1 ph3">
+      <h2 class="f1">Party list</h2>
+    </header>
+    <article class="center mw5 mw6-ns hidden ba b--light-gray mv5">
+    <h1 class="f4 bg-light-green dark-green mv0 pv2 ph3 ">Sinulle sopivimmat puolueet</h1>
+    <div class="pa3 bg-white">
     <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
       <div class="dtc w2 w3-ns v-mid">
         <img src="http://img.clipartall.com/lady-bug-on-ladybugs-san-cute-ladybug-clipart-736_937.jpg" class="ba b--black-10 db br2 w2 w3-ns h2 h3-ns"/>
@@ -76,6 +85,56 @@
     </article>
   </div>
 </article>
-    
+
+  <header class="bg-light-green pv1 ph3">
+    <h2 class="f1">Voting list</h2>
+  </header>
+  <section class="mw7 center bg-white">
+    <article class="bt bb b--black-10">
+      <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
+        <div class="flex flex-column flex-row-ns">
+          <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+            <img src="http://lorempixel.com/800/600/city" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+          </div>
+          <div class="w-100 w-60-ns pl3-ns">
+            <h3 class="f5 gray mv0">1/23</h3>
+            <h1 class="f4 dark-gray mv2 ttu">Ginza business class hub, soft power elegant Marylebone Comme des Garçons Winkreative flat white sophisticated K-pop conversation?</h1>
+            <a class="f6 link dim br1 ph3 pt2 pb1 mb2 dib white bg-red" href="#0">Äänestit EI</a>
+            <p><a class="f6 fw6 db blue link dim" href="#0">Katso tulokset</a></p>
+          </div>
+        </div>
+      </a>
+    </article>
+    <article class="bt bb b--black-10">
+      <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
+        <div class="flex flex-column flex-row-ns">
+          <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+            <img src="http://lorempixel.com/800/600/city" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+          </div>
+          <div class="w-100 w-60-ns pl3-ns">
+            <h3 class="f5 gray mv0">2/23</h3>
+            <h1 class="f4 dark-gray mv2 ttu">Ginza business class hub, soft power elegant Marylebone Comme des Garçons Winkreative flat white sophisticated K-pop conversation?</h1>
+            <a class="f6 link dim br1 ph3 pt2 pb1 mb2 dib white bg-blue" href="#0">Äänestit KYLLÄ</a>
+            <p><a class="f6 fw6 db blue link dim" href="#0">Katso tulokset</a></p>
+          </div>
+        </div>
+      </a>
+    </article>
+    <article class="bt bb b--black-10">
+      <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
+        <div class="flex flex-column flex-row-ns">
+          <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+            <img src="http://lorempixel.com/800/600/city" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+          </div>
+          <div class="w-100 w-60-ns pl3-ns">
+            <h3 class="f5 gray mv0">3/23</h3>
+            <h1 class="f4 dark-gray mv2 ttu">Ginza business class hub, soft power elegant Marylebone Comme des Garçons Winkreative flat white sophisticated K-pop conversation?</h1>
+            <a class="f6 link dim br1 ph3 pt2 pb1 mb2 dib white bg-dark-gray" href="#0">Äänestä</a>
+            <p><a class="f6 fw6 db blue link dim" href="#0">Katso tulokset</a></p>
+          </div>
+        </div>
+      </a>
+    </article>
+  </section>
   </body>
 </html>
